fixing stretch

--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 
 
 html {
-    font-size: 62.5%; 
+    font-size: 62.5%;
+    overflow-x: hidden;
+
 }
 
 
 body {
-	overflow-x: hidden;
   	background-color: white;
   	font-family: 'Karla', sans-serif;
 
@@ -38,7 +39,7 @@ p {
 }
 
 .container{
-	width:100vh;
+	width:100vw;
 	overflow-x: hidden;}
 
 .underline {
@@ -144,8 +145,8 @@ p {
 	.rect {
 		z-index: -3;
 		position: absolute;
-		left:-40vh;
-		top:28vh;
+		left: -40vw;
+		top: 28vh;
 	  	width: 800px;
 
 	  	user-drag: none; 
@@ -160,13 +161,10 @@ p {
 	.shapes {
 		z-index: -2;
 		position: absolute;
-		right:-16%;
-		top:40vh;
+		right: -16%;
+		top: 40vh;
 	  	width: 580px;
 	  	overflow-x: hidden;
-
-
-
 		}
 
 
